Fix some odd resizing on mobile devices

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -14,3 +14,24 @@ span {
 .point-button {
     font-size: 3vh;
 }
+
+.non-zooming-tap {
+    touch-action: manipulation;
+    width: 90%;
+}
+
+.main-container {
+    touch-action: manipulation !important;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
